--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="wrapper">
 
         <!--3D Button-->
-        <div class="accordion_button" data-toggle="collapse" data-target="#demo">Diseño 3D</div>
+        <div class="accordion_button">Diseño 3D</div>
 
         <!--3D Content-->
         <div class="accordion_content">
